# qorpo_test

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/web/: Dockerfile  entrypoint.sh
src/: __main__.py  alembic.ini  app.py  config.py  routes.py  services.py
src/db/: models.py  schemas.py  session.py
src/db/alembic/: env.py
src/db/alembic/versions/: e600f7d59ad8_initial.py
src/db/orm/: __init__.py  base.py  currency.py
